<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stories.DetailStoriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginEnd="@dimen/margin16dp"
            android:contentDescription="@string/photo"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginEnd="@dimen/margin16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="1"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginEnd="@dimen/margin16dp"
            android:textSize="14sp"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_detail_uploaded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginEnd="@dimen/margin16dp"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="@string/upload_date" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
    </LinearLayout>


</ScrollView>