<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.spalsh.WelcomeActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin32dp"
        android:layout_marginTop="@dimen/margin32dp"
        android:layout_marginEnd="@dimen/margin32dp"
        android:text="@string/title_welcome_page"
        android:textSize="20sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/desc_text_view"/>

    <TextView
        android:id="@+id/desc_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin32dp"
        android:layout_marginBottom="@dimen/margin32dp"
        android:text="@string/message_welcome_page"
        android:textSize="14sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/login"
        android:alpha="0"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="@id/sign_up_button"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/margin32dp"
        android:layout_marginEnd="@dimen/margin32dp"
        android:layout_marginBottom="@dimen/margin32dp"
        android:text="@string/signup"
        android:alpha="0"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/copyright" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin16dp"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:text="@string/copyright"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>