<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_item_photo"
            android:textSize="14sp"
            android:textStyle="bold"
            android:maxLines="1"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            tools:text="@string/user_name" />

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/photo"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_item_photo"
            android:textSize="12sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_photo"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_uploaded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/upload_date"
            android:textSize="11sp"
            android:textStyle="italic"
            card_view:layout_constraintEnd_toEndOf="@id/tv_description"
            card_view:layout_constraintStart_toStartOf="@id/tv_description"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>