<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin32dp"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        android:contentDescription="@string/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
        app:srcCompat="@drawable/onboarding_2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/margin32dp"
        android:layout_marginEnd="@dimen/margin32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/name_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/name_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text_layout"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.example.storyapp.tools.control.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/email_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/email_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text_layout"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:passwordToggleEnabled="true">

        <com.example.storyapp.tools.control.PasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/signup"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@id/password_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/password_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin16dp"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:text="@string/copyright"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>